--- a/src/app/pages/about-us/components/about-us/about-us.component.html
+++ b/src/app/pages/about-us/components/about-us/about-us.component.html
@@ -309,17 +309,17 @@
             <div class="contactSection-texts">
                 <span class="subtitle24px d-block color-linearGradient font-medium mb24" data-aos="fade-down"
                     data-aos-easing="linear" data-aos-duration="1000"> Join CODE. Shape What’s Next.</span>
-                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Ready to Build the <span
-                        class="color-linearGradient">Future
-                    </span>and <span class="color-linearGradient">Grow </span>with Us?</h1>
+                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Let’s <span
+                        class="color-linearGradient">Build <br> Smarter </span>Together</h1>
             </div>
             <div class="contactSection-buttons d-flex">
-                <button class="btn-linearGradient" type="button">
-                    <span class="font-semiBold colorWhite subtitle20px">Contact us</span>
+                <button class="btn-linearGradient" type="button" (click)="router.navigate(['contactUs'])">
+                    <span class="font-semiBold colorWhite subtitle20px">Talk to the CODE Team</span>
                     <img src="assets/images/arrow-up-right.svg" alt="arrow-up-right">
                 </button>
             </div>
         </div>
-        <p class="mb-0 colorTwo style-font">CODE ensuring a clear roadmap for your business to success.</p>
+        <p class="mb-0 colorTwo style-font subtitle20px">Connect with our team to explore AI solutions built around your
+            goals, challenges, and infrastructure.</p>
     </div>
 </section>
