--- a/src/app/pages/about-us/our-clients/our-clients.component.html
+++ b/src/app/pages/about-us/our-clients/our-clients.component.html
@@ -16,9 +16,8 @@
     <div class="tabsLogos-container px-120">
         <!-- Tabs -->
         <div class="justify-content-between fxBtns fxGeneral-cards">
-            <button *ngFor="let tab of tabs" type="button" class="tabItem colorFour font-medium subtitle24px fxCard"
-                [ngClass]="{ active: activeTab === tab.key }" [style.background]="tab.bgColor"
-                (click)="setActiveTab(tab.key)">
+            <button *ngFor="let tab of tabs" type="button" [ngClass]="getTabClasses(tab.key)"
+                [style.background]="tab.bgColor" (click)="setActiveTab(tab.key)">
                 {{ tab.label }}
             </button>
         </div>
@@ -34,6 +33,17 @@
 
     </div>
 </section>
+<section class="sectionTitles">
+    <div class="d-flex flex-column divTitles"><span
+            class="font-medium text-center subtitle24px color-linearGradient">Trusted where it matters most</span>
+        <h1 data-aos="fade-down" class="text-center font-bold subtitle48px aos-init aos-animate"> Chosen by <span
+                class="color-linearGradient"> Leaders. </span> Built for <span
+                class="color-linearGradient">Impact.</span></h1>
+        <p class="mb-0 text-center subtitle24px style-font">Every partnership reflects our commitment to scalable
+            technology, trusted delivery, and long-term impact.
+            We work where performance matters most.</p>
+    </div>
+</section>
 <!-- <app-people-saying></app-people-saying> -->
 
 <section class="contactSection">
@@ -42,17 +52,19 @@
         <div class="contactSection-div d-flex">
             <div class="contactSection-texts">
                 <span class="subtitle24px d-block color-linearGradient font-medium mb24" data-aos="fade-down"
-                    data-aos-easing="linear" data-aos-duration="1000"> Be always in touch</span>
-                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Let’s <span
-                        class="color-linearGradient">Empower</span> your <br> brand & business</h1>
+                    data-aos-easing="linear" data-aos-duration="1000"> Your Next Move Starts Here</span>
+                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Partner with <span
+                        class="color-linearGradient">CODE</span> <br> Perform with <span
+                        class="color-linearGradient">Confidence.</span></h1>
             </div>
             <div class="contactSection-buttons d-flex">
-                <button class="btn-linearGradient" type="button">
-                    <span class="font-semiBold colorWhite subtitle20px">Contact us</span>
+                <button class="btn-linearGradient" type="button" (click)="router.navigate(['contactUs'])">
+                    <span class="font-semiBold colorWhite subtitle20px">Talk to the CODE Team</span>
                     <img src="assets/images/arrow-up-right.svg" alt="arrow-up-right">
                 </button>
             </div>
         </div>
-        <p class="mb-0 colorTwo style-font subtitle20px">Let's talk about your needs for business IT services</p>
+        <p class="mb-0 colorTwo style-font subtitle20px">Talk to our team about future-focused solutions tailored to
+            your organization’s needs.</p>
     </div>
 </section>
