--- a/src/app/pages/our-servcies/components/servcies/servcies.component.html
+++ b/src/app/pages/our-servcies/components/servcies/servcies.component.html
@@ -154,13 +154,13 @@
                     skills</h1>
             </div>
             <div class="contactSection-buttons d-flex">
-                <button class="btn-linearGradient" type="button" onclick="window.location.href=''">
+                <button class="btn-linearGradient" type="button" (click)="router.navigate(['contactUs'])">
                     <span class="font-semiBold colorWhite subtitle20px">Contact us</span>
                     <img src="assets/images/arrow-up-right.svg" alt="arrow-up-right">
                 </button>
             </div>
         </div>
-        <p class="mb-0 colorTwo style-font subtitle28px">DB Consulting specializes in SQL Server, our tutorial and
+        <p class="mb-0 colorTwo style-font subtitle20px">DB Consulting specializes in SQL Server, our tutorial and
             training
             is founded
             on
