--- a/src/app/pages/about-us/components/about-us/about-us.component.css
+++ b/src/app/pages/about-us/components/about-us/about-us.component.css
@@ -92,8 +92,9 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    margin: auto;
+    display: block;
 }
-.aboutSTwo .sliderLogos-black .slide img{width: 100%;margin: auto;display: block;}
 @media (min-width:1706.67px) {
     .aboutSTwo .aboutSTwoText .leftLogo{width: 50px;}
     .aboutSTwo .aboutSTwoText .rightLogo{width: 90px;}
