--- a/src/app/pages/about-us/our-clients/our-clients.component.css
+++ b/src/app/pages/about-us/our-clients/our-clients.component.css
@@ -81,9 +81,26 @@
     transition: all 0.3s ease;
 }
 .tabsLogos .fxBtns button.active{
-    font-weight: 600;
+    border-radius: 15px;
     box-shadow: 0 4px 12px rgba(61, 61, 61, 0.1);
     transform: scale(1.03);
+    font-weight: 500;
+}
+.tabsLogos .fxBtns button.active-government {
+    border: 1px solid #D51C38;
+    color: #D51C38;
+  }
+.tabsLogos .fxBtns button.active-pif {
+    border: 1px solid #F9853D;
+    color: #F9853D;
+}
+.tabsLogos .fxBtns button.active-healthcare {
+    border: 1px solid #006DC6;
+    color: #006DC6;
+}
+.tabsLogos .fxBtns button.active-telecom {
+    border: 2px solid #00AAC8;
+    color: #00AAC8;
 }
 .tabsLogos .fxBtns button:hover{
     transform: scale(0.97);
@@ -119,6 +136,8 @@
    width: max-content;
    font-size: 12px;
 }
+.sectionTitles{margin-top: 25px;}
+
 /* Just for copy */
 @media (min-width:1706.67px) {}
 @media (min-width:1920px) {
