--- a/src/app/shared/navbar-des/navbar-des.component.html
+++ b/src/app/shared/navbar-des/navbar-des.component.html
@@ -13,7 +13,8 @@
                     <img src="assets/images/arrowDown.svg" alt="arrowDown icon">
                 </button>
                 <div class="listAboutHeader">
-                    <a routerLink="aboutUs" routerLinkActive="active" class="font-medium subtitle16px ">About CODE</a>
+                    <a routerLink="aboutUs" routerLinkActive="active" class="font-medium subtitle16px "
+                        [routerLinkActiveOptions]="{ exact: true }">About CODE</a>
                     <a routerLink="/aboutUs/ourClients" routerLinkActive="active" class="font-medium subtitle16px ">Our
                         clients</a>
                     <a routerLink="/aboutUs/ourPartners" routerLinkActive="active" class="font-medium subtitle16px">Our
