--- a/src/app/pages/our-news/components/our-news/our-news.component.html
+++ b/src/app/pages/our-news/components/our-news/our-news.component.html
@@ -172,8 +172,8 @@
                         class="color-linearGradient">Action</span></h1>
             </div>
             <div class="contactSection-buttons d-flex">
-                <button class="btn-linearGradient" type="button">
-                    <span class="font-semiBold colorWhite subtitle20px">Contact us</span>
+                <button class="btn-linearGradient" type="button" (click)="router.navigate(['contactUs'])">
+                    <span class="font-semiBold colorWhite subtitle20px">Talk to the CODE Team</span>
                     <img src="assets/images/arrow-up-right.svg" alt="arrow-up-right">
                 </button>
             </div>
