--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -63,13 +63,17 @@
     <div class="sectionTwo-container px-120">
         <div class="d-flex fx-sectionTwo">
             <div class="part1-sectionTwo">
-                <h4 class="font-medium color-linearGradient subtitle24px">What you earn?</h4>
-                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">Cut Government IT Costs by<span
-                        class="color-linearGradient">30%</span></h1>
+                <h4 class="font-medium color-linearGradient subtitle24px">Intelligence That Performs</h4>
+                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">For Leaders Ready <br> to <span
+                        class="color-linearGradient">Build What’s Next</span></h1>
             </div>
-            <p class="style-font mb-0 subtitle24px">CODE is a leading partner for many heavy weight companies in the ICT
-                sector, most notably Cisco, as it contributes to a
-                large portion of Cisco’s business in Saudi Arabia.</p>
+            <p class="style-font mb-0 subtitle24px">CODE delivers <b> real-time visibility, smarter automation, and
+                    data-driven control </b>— all built for scale, speed, and
+                security. From <span class="color-linearGradient">Digital Twins</span> to <span
+                    class="color-linearGradient">Computer Vision</span> , our AI
+                platforms help you solve complex challenges,
+                improve operations,
+                and unlock measurable impact across your environment.</p>
         </div>
         <div class="fx-sectionTwoImgs d-flex align-items-center">
             <img src="assets/images/sectionTwo-img1.png" alt="Who we are img" class="sectionTwo-img1"
