--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -64,7 +64,7 @@
         <div class="d-flex fx-sectionTwo">
             <div class="part1-sectionTwo">
                 <h4 class="font-medium color-linearGradient subtitle24px">Intelligence That Performs</h4>
-                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">For Leaders Ready <br> to <span
+                <h1 class="font-bold mb-0 subtitle48px" data-aos="fade-down">For Leaders Ready to <span
                         class="color-linearGradient">Build What’s Next</span></h1>
             </div>
             <p class="style-font mb-0 subtitle24px">CODE delivers <b> real-time visibility, smarter automation, and
